--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application x:Class="UPSTask.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UPSTask"
              xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
              Startup="OnStartup"
     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
@@ -159,6 +158,7 @@
         <Style x:Key="ComboBoxToggleButton" TargetType="ToggleButton">
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderBrush" Value="Gray"/>
+            <Setter Property="Foreground" Value="Black"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="Padding" Value="3"/>
             <Setter Property="Template">
@@ -176,15 +176,14 @@
             </Setter>
         </Style>
 
-        <!-- Define the ComboBoxTextBox style -->
-        <Style x:Key="ComboBoxTextBox" TargetType="TextBox">
-            <Setter Property="Background" Value="Transparent"/>
+        <Style x:Key="TextBoxComboBox" TargetType="{x:Type TextBox}">
+            <Setter Property="Background" Value="Red"/>
             <Setter Property="BorderBrush" Value="Gray"/>
+            <Setter Property="Foreground" Value="Black"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="Padding" Value="3"/>
         </Style>
 
-        <!-- Define the ComboBoxDropDownBackground brush -->
         <SolidColorBrush x:Key="ComboBoxDropDownBackground" Color="White"/>
 
         <Style x:Key="comboBoxSearch" TargetType="ComboBox">
@@ -224,18 +223,21 @@
                                 VerticalAlignment="Center"
                                 HorizontalAlignment="Left"
                                 />
-                                    <!--<TextBox
+                                    <TextBox
                                 x:Name="PART_EditableTextBox"
-                                Style="{x:Null}"
-                                Template="{StaticResource ComboBoxTextBox}"
+                                Style="{StaticResource TextBoxComboBox}"
+                                Background="Transparent"
+                                BorderBrush="Gray"
+                                BorderThickness="1"
+                                Padding="3"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center"
+                                        Foreground="Gray"
                                 Margin="3,3,23,3"
                                 Focusable="True"
-                                Background="Transparent"
                                 Visibility="Hidden"
                                 IsReadOnly="{TemplateBinding IsReadOnly}"
-                                />-->
+                                />
                                 </Grid>
                             </Border>
                             <Popup
@@ -274,15 +276,10 @@
 
         <Style x:Key="ComboBoxSelectOverlay" TargetType="TextBlock">
             <Setter Property="Grid.ZIndex" Value="10"/>
-            <Setter Property="Foreground" Value="{x:Static SystemColors.GrayTextBrush}"/>
+            <Setter Property="Foreground" Value="Gray"/>
             <Setter Property="Margin" Value="6,4,10,0"/>
             <Setter Property="IsHitTestVisible" Value="False"/>
-            <Setter Property="Visibility" Value="Hidden"/>
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding}" Value="{x:Null}">
-                    <Setter Property="Visibility" Value="Visible"/>
-                </DataTrigger>
-            </Style.Triggers>
+            <Setter Property="Visibility" Value="Visible"/>
         </Style>
 
 
